# RAKT-food-truck

./: README.md  docker-compose.yaml  manage.py  pyproject.toml
RAKT_food_truck/: asgi.py  settings.py  urls.py  wsgi.py
docker/django/: Dockerfile  start.sh
food_trucks/: models.py
food_trucks/management/commands/: load_food_trucks_from_csv.py
food_trucks/migrations/: 0001_initial.py
food_trucks/rest_views/: food_trucks_view_set.py
food_trucks/services/: get_closer_trucks_by_walking.py  get_walking_distance.py
